feat: add colour

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="./styles/file.css"> -->
     <!-- <link rel="stylesheet" href="./styles/file2.css"> -->
      <link rel="stylesheet" href="styles/colors.css"> 
+     <a href="./country.html" target="_blank" title="country flags">country flags</a>
 </head>
 <body>
     <main>
